# Decision-Tree-C-

./: CMakeLists.txt  DecTree.cpp  README.md  main.cpp
include/: iris.h  utils.h
src/: iris.cpp  utils.cpp
